# MORPH

./: .gitignore  README.md  compose.yaml  index.html  local_notes.txt
.github/workflows/: build-server.yaml
backend/: .dockerignore  Dockerfile  config.py  docker-compose.yml  g.py  main.py  pyproject.toml
backend/auth/: endpoints.py  model.py
backend/cosmos/: __init__.py
backend/integration/: test_auth.py
backend/postgres/: __init__.py
backend/progress/: endpoints.py  model.py
backend/users/: endpoints.py  model.py
cf-workers/cert-worker/: package.json  worker-configuration.d.ts  wrangler.jsonc
cf-workers/dns-worker/: package.json  worker-configuration.d.ts  wrangler.jsonc
desktop-app/: .cta.json  .gitignore  biome.json  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
desktop-app/bt-scanner/: pyproject.toml  scan.py  scanner.py  send-wifi.py
desktop-app/electron/: backend.ts  bluetooth-tethering.ts  bt-scanner.ts  main.ts  preload.ts
desktop-app/shared/: ipc-types.ts
desktop-app/src/: main.tsx  routeTree.gen.ts  router.tsx  styles.css
desktop/foxglove/: bridge.py  protocol.py
robot/: .dockerignore  Dockerfile  avahi.py  bt-service.py  bundle.sh  config.py  constants.py  download_wstunnel.sh  entrypoint.bash  entrypoint.sh  gatt-server.py  main.py  morph.service  pyproject.toml  scripts.bash  write_wg_config.py
robot/broadcast/: main.py  pyproject.toml
robot/certs/: get-certs.sh
robot/characteristics/: __init__.py  network_status.py  private_ip.py  wifi_provisioning.py  wifi_status.py
robot/dev/: mac.bash
robot/foxglove-docker/: .dockerignore  Dockerfile  compose.yaml  entrypoint.bash
robot/gatt/: advertisement.py  config.py  constants.py  service.py
robot/gatt-server/: .gitignore  config.py
ros2_ws/: README_SIM.md  docker-compose.sim.yml  docker-compose.yml
ros2_ws/config/: nav2_params.yaml  slam_toolbox.yaml
ros2_ws/docker/: cyclonedds.xml  sim.Dockerfile
ros2_ws/src/morph_description/: CMakeLists.txt  package.xml
ros2_ws/src/morph_description/urdf/: morph.urdf.xacro
ros2_ws/src/morph_sim/: package.xml  setup.cfg  setup.py
ros2_ws/src/morph_sim/config/: nav2_params.yaml  slam_toolbox.yaml
ros2_ws/src/morph_sim/launch/: nav2_sim.launch.py  sim_stack.launch.py
ros2_ws/src/morph_sim/morph_sim/: kinematic_world.py
ros2_ws/src/morph_sim/resource/: morph_sim
server/: .gitignore  Dockerfile  entrypoint.sh  exe.py  main.py  pyproject.toml
server/foxglove/: client.py  client_manager.py  constants.py  protocol.py
server/foxglove/capabilities/: diff_drive.py  twist.py
server/foxglove/messages/: header.py  laser_scan.py  occupancy_grid.py  twist_stamped.py
server/ip/: ip_manager.py
server/robots/: robot.py  robot_listener.py
server/zeroconf/: RobotListener.py
test/: package.json
web/: .cta.json  README.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
web/electron/: main.js  package.json  preload.js
web/public/: manifest.json
(+138 files in other folders)
