[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "azure-cosmos>=4.15.0",
    "azure-identity>=1.25.3",
    "fastapi[standard]>=0.135.3",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt[crypto]>=2.12.1",
]
