[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "psycopg[binary,pool]>=3.2.10",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt[crypto]>=2.12.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "setuptools>=82.0.1",
    "testcontainers[postgres]>=4.14.2",
]

[tool.pytest]
minversion = "9.0"
asyncio_mode = "auto"
addopts = ["-ra", "-q"]
testpaths = [
    "tests",
    "integration",
]
