[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.1",
    "psutil>=7.2.2",
    "pyinstaller>=6.18.0",
    "python-socketio>=5.16.0",
    "uvicorn[standard]>=0.40.0",
    "websockets>=16.0",
    "zeroconf>=0.148.0",
]
