<?xml version="1.0"?>
<package format="3">
  <name>morph_description</name>
  <version>0.0.1</version>
  <description>Minimal MORPH robot description for headless simulation.</description>
  <maintainer email="jake@example.com">Jake</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
