<?xml version="1.0"?>
<package format="3">
  <name>morph_sim</name>
  <version>0.0.1</version>
  <description>Headless MORPH simulation stack for Foxglove and app testing.</description>
  <maintainer email="jake@example.com">Jake</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>nav_msgs</depend>
  <depend>rclpy</depend>
  <depend>robot_state_publisher</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>xacro</depend>

  <exec_depend>foxglove_bridge</exec_depend>
  <exec_depend>morph_description</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
